说明文档处理